--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
         </div>
     </div>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/wordbank.js"></script>
     <script type="text/javascript" src="assets/javascript/main.js"></script>
-    <!-- <script type="text/javascript" src="clickletter.js"></script> -->
-
+    <script type="text/javascript" src="assets/javascript/clickletter.js"></script>
+    
 
 
 
